@@ -11,10 +11,13 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.modelmapper.ModelMapper;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -25,6 +28,7 @@ public class WorkerServiceImpl implements WorkerService {
     private final ModelMapper modelMapper;
 
     @Override
+    @CacheEvict(value = "workerTickets", key = "#userDetails.username")
     public void completeTicket(Long id, UserDetails userDetails) {
         log.info("Worker close ticket request. Initiator - {}", userDetails.getUsername());
         val optionalTicket = ticketRepository.findById(id);
@@ -36,8 +40,9 @@ public class WorkerServiceImpl implements WorkerService {
             }else{
                 throw new IllegalArgumentException(String.format("Worker - %s dont have permission to make action with ticket %d", userDetails.getUsername(), id));
             }
+        }else{
+            throw new IllegalArgumentException("Ticket not found");
         }
-        throw new IllegalArgumentException("Ticket not found");
     }
 
     @Override
@@ -50,9 +55,10 @@ public class WorkerServiceImpl implements WorkerService {
     }
 
     @Override
+    @Cacheable(value = "workerTickets", key = "#userDetails.username")
     public List<TicketDto> getAssignedTickets(UserDetails userDetails) {
         log.info("Worker get all assigned tickets. Initiator - {}", userDetails.getUsername());
         val user = userRepository.findByUsername(userDetails.getUsername()).orElseThrow();
-        return ticketRepository.findByStatusAndAssignedToId(TicketStatus.IN_PROGRESS, user.getId()).stream().map(e-> modelMapper.map(e, TicketDto.class)).toList();
+        return ticketRepository.findByStatusAndAssignedToId(TicketStatus.IN_PROGRESS, user.getId()).stream().map(e-> modelMapper.map(e, TicketDto.class)).collect(Collectors.toList());
     }
 }
